2008-07-19  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36877
	* gcc.dg/gomp/atomic-11.c: New test.

2008-07-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/36366
	* gfortran.dg/used_types_20.f90: New test.

2008-07-18  Dodji Seketeli  <dseketel@redhat.com>

	PR c++/36407
	* g++.dg/conversion/op5.C: New testcase.

2008-07-18  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/35281
	* gcc.target/i386/pr35281.c: New.

2008-07-17  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:

	2008-06-02  Andy Hutchinson  <hutchinsonandy@aim.com>
	* gcc.dg/torture/pr34330.c: Skip test for targets without pthread.
	* gcc.dg/torture/pr36244.c: Ditto.
	* gcc.dg/tree-ssa/pr36181.c: Ditto.

2008-07-17  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:

	2008-05-27  Trevor Smigiel  <trevor_smigiel@playstation.sony.com>
		    Sa Liu  <saliu@de.ibm.com> 

	* gcc.target/spu/muldivti3.c: New. Test TImode mul and div
	functions on SPU.

	2008-05-08  Sa Liu  <saliu@de.ibm.com>

	* gcc.target/spu/subti3.c: New.

2008-07-17  Tobias Burnus  <burnus@net-b.de>

	PR fortran/36824
	* gfortran.dg/array_4.f90: New.

2008-07-17  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/36753
	* gcc.target/i386/pr36753.c: New.

2008-07-15  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36369
	* gcc.dg/Wstrict-aliasing-bogus-ref-all.c: New testcase.

2008-07-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/35492
	* gcc.c-torture/compile/pr35492.c: New test.

2008-07-10  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/36419
	* g++.dg/eh/async-unwind1.C: New test.

2008-07-09  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/35802
	* gcc.target/mips/pr35802.c: New test.

2008-07-07  Simon Martin  <simartin@users.sourceforge.net>

	PR c++/34963
	* g++.dg/parse/dtor13.C: New test.

2008-07-03  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_optimization3.adb: New test.
	* gnat.dg/loop_optimization3_pkg.ad[sb]: New helper.
